--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -22,9 +22,9 @@
     <%= text_field_tag "email" %>
   </div>
 
-  <div class="field <%= 'field_with_errors' if @author.errors[:email].any? %>">
+  <div class="field <%= 'field_with_errors' if @author.errors[:phone_number].any? %>">
     <%= label_tag "phone_number", "Phone Number" %>
-    <%= text_field_tag "phone_number", @author.email %>
+    <%= text_field_tag "phone_number", @author.phone_number %>
   </div>
 
   <%= submit_tag "Create" %>
