--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -17,9 +17,9 @@
     <%= text_field_tag "name", @author.name %>
   </div>
 
-  <div class="field">
+  <div class="field <%= 'field_with_errors' if @author.errors[:email].any? %>">
     <%= label_tag "email", "Email" %>
-    <%= text_field_tag "email" %>
+    <%= text_field_tag "email", @author.email %>
   </div>
 
   <div class="field <%= 'field_with_errors' if @author.errors[:phone_number].any? %>">
